Clean up unsed images and swap out backend image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
@@ -165,7 +165,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/backend-v2.svg" alt="" style="height:180px">
+                            <img src="images/backend.svg" alt="" style="height:180px">
                         </div>
                         <h4>Programmer</h4>
                         <p>Write the code that makes your hack work.</p>
@@ -202,25 +202,26 @@
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
                     <div class="page-title">
                         <h2>Sponsor Spotlight</h2>
-                        <p>Coming soon! Want to see your logo here? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+                        <p>Coming soon! Want to see your logo here? Reach out to us at <a
+                                href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <!--sponsors start-->
-<!--                <div class="col-xs-12 col-sm-6 col-md-4">-->
-<!--                    <div class="box">-->
-<!--                        <div class="box-icon">-->
-<!--                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"-->
-<!--                                                             style="height:175px" alt=""></a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <!--                <div class="col-xs-12 col-sm-6 col-md-4">-->
+                <!--                    <div class="box">-->
+                <!--                        <div class="box-icon">-->
+                <!--                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"-->
+                <!--                                                             style="height:175px" alt=""></a>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
                 <!--sponsors end-->
             </div>
-<!--            <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">-->
-<!--                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>-->
-<!--            </div>-->
+            <!--            <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">-->
+            <!--                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>-->
+            <!--            </div>-->
         </div>
     </section>
     <img src="images/fishy-17.svg" id="fish2">
@@ -278,7 +279,8 @@
                             </h4>
                             <div id="collapse4" class="panel-collapse collapse">
                                 <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know you
-                                    night owls get the munchies.) There are also restaurants around the venue to buy food
+                                    night owls get the munchies.) There are also restaurants around the venue to buy
+                                    food
                                     and snacks, and you can always bring your own!</p>
                             </div>
                         </div>
@@ -290,8 +292,10 @@
                             <div id="collapse5" class="panel-collapse collapse">
                                 <p>Hackathons are <a
                                         href="https://medium.com/tfogo/hackathons-are-for-beginners-77a9c9c0e000#.cj21niskl">very
-                                    beginner friendly.</a> Whether you're an absolute beginner, a new computer science student, or an experienced hacker,
-                                    you're the right fit for vhHacks. Artists, musicians, athletes, gamers, everyone is welcome!</p>
+                                    beginner friendly.</a> Whether you're an absolute beginner, a new computer science
+                                    student, or an experienced hacker,
+                                    you're the right fit for vhHacks. Artists, musicians, athletes, gamers, everyone is
+                                    welcome!</p>
                             </div>
                         </div>
                         <div class="panel">
@@ -305,6 +309,20 @@
                                             href="https://learningspaces.ubc.ca/classrooms/henn-200">here</a> and
                                     directions to the venue <a
                                             href="https://www.google.ca/maps/dir//Hennings+Building,+Hennings+Bldg,+Vancouver,+BC+V6T+1Z1/@49.2664798,-123.2543775,17z/data=!4m16!1m6!3m5!1s0x548672b6f5321131:0x1877a1f004691be!2sHennings+Building!8m2!3d49.2664763!4d-123.2521888!4m8!1m0!1m5!1m1!1s0x548672b6f5321131:0x1877a1f004691be!2m2!1d-123.2521888!2d49.2664763!3e3">here.</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse10">Can I get travel
+                                    reimbursements?</a>
+                            </h4>
+                            <div id="collapse10" class="panel-collapse collapse">
+                                <p>
+                                    Unfortunately, we cannot directly provide travel reimbursement for our participants
+                                    at this time. But you can apply for <a href="https://grant.executebig.org">Execute Big's Travel
+                                    Grant</a>, so you can join us without having to pay for
+                                    travel!
                                 </p>
                             </div>
                         </div>
@@ -342,7 +360,8 @@
                             </h4>
                             <div id="collapse9" class="panel-collapse collapse">
                                 <p>
-                                    Since vhHacks is a 24 hour event, prepare to stay overnight! Food will be provided--more info to come.
+                                    Since vhHacks is a 24 hour event, prepare to stay overnight! Food will be
+                                    provided--more info to come.
                                 </p>
                             </div>
                         </div>
@@ -383,7 +402,8 @@
                 <!--sponsors end-->
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>
+                </p>
             </div>
         </div>
     </section>
@@ -405,7 +425,7 @@
                     <div class="box">
                         <div class="box-icon">
                             <a href="https://www.nwplus.io"><img src="images/nwplus.png"
-                                                                               style="height:175px" alt=""></a>
+                                                                 style="height:175px" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -413,7 +433,7 @@
                     <div class="box">
                         <div class="box-icon">
                             <a href="https://vikingsdev.ca"><img src="images/vikingsdevlogo.png"
-                                                                               style="height:175px" alt=""></a>
+                                                                 style="height:175px" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -436,11 +456,12 @@
         </div>
     </section>
 
-    <section class = "social-section text-center">
-        <div class = "container">
-            <div class = "row">
+    <section class="social-section text-center">
+        <div class="container">
+            <div class="row">
                 <a href="https://www.instagram.com/vhhacks/" target="_blank"><i class="sicon ti-instagram"></i></a>
-                <a href="https://www.facebook.com/vancouverhighschoolhackathon/" target="_blank"><i class="sicon ti-facebook"></i></a>
+                <a href="https://www.facebook.com/vancouverhighschoolhackathon/" target="_blank"><i
+                        class="sicon ti-facebook"></i></a>
             </div>
         </div>
     </section>
@@ -453,8 +474,9 @@
                 <div class="row">
                     <div class="col-xs-12 text-center">
                         <p>&copy;Copyright 2018 All rights reserved. <br>Built with <i class="ti-heart"
-                                                                                                       aria-hidden="true"></i>
-                            by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Based on the Colid template from <a href="https://colorlib.com">Colorlib</a></p>
+                                                                                       aria-hidden="true"></i>
+                            by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Based on the Colid template
+                            from <a href="https://colorlib.com">Colorlib</a></p>
                     </div>
                 </div>
             </div>
