Enable register button on website

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                                             showcase a project in under 24 hours. No experience? No problem! vhHacks is
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
-                                    <!--<div class="caption-button" data-animation="animated fadeInUp">
-                                        <a href="#" class="button">Register now!</a>
-                                    </div>-->
+                                    <div class="caption-button" data-animation="animated fadeInUp">
+                                        <a href="http://vhhacks.surveysparrow.com/s/vhHacks/tt-6c1e13" class="button">Register now!</a>
+                                    </div>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
                                     <div class="one" data-animation="animated fadeInRight">
