Update socials link, add sponsorship pack

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                     <div class="page-title">
                         <h2>Sponsor Spotlight</h2>
                         <p>Coming soon! Want to see your logo here? Reach out to us at <a
-                                href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+                                href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -455,7 +457,7 @@
         <div class="container">
             <div class="row">
                 <a href="https://www.instagram.com/vhhacks/" target="_blank"><i class="sicon ti-instagram"></i></a>
-                <a href="https://www.facebook.com/vancouverhighschoolhackathon/" target="_blank"><i
+                <a href="https://www.facebook.com/events/432399567627158/" target="_blank"><i
                         class="sicon ti-facebook"></i></a>
             </div>
         </div>
