Update Temporary Link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
                                     <div class="caption-button" data-animation="animated fadeInUp">
-                                        <a href="http://vhhacks.surveysparrow.com/s/vhHacks/tt-6c1e13" class="button">Register now!</a>
+                                        <a href="https://www.facebook.com/events/432399567627158/" class="button">I'm interested!</a>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
