--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             </h4>
                             <div id="collapse1" class="panel-collapse collapse in">
                                 <p>A hackathon is an invention marathon. Students come together in teams to build cool
-                                    software and hardware projects over 24 hours.</p>
+                                    software and hardware projects over the course of 24 hours.</p>
                             </div>
                         </div>
                         <div class="panel">
