--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="col-xs-8 col-md-8 header-text text-center">
                 <h2>vhHacks 2020</h2>
                 <p>March 14 - 15 <br> University of British Columbia</p>
-                <a href="https://www.facebook.com/events/432399567627158/" class="button">Facebook Event</a>
+                <a href="https://fdier.co/IZnb7l" class="button">Keep in Touch!</a>
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
@@ -120,7 +120,7 @@
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
                                     <div class="caption-button" data-animation="animated fadeInUp">
-                                        <a href="https://www.facebook.com/events/432399567627158/" class="button">I'm interested!</a>
+                                        <a href="https://www.facebook.com/events/432399567627158/" class="button">See the Facebook Event!</a>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
