Edit about section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                         <h2>What is vhHacks?</h2>
                                     </div>
                                     <div class="caption-desc" data-animation="animated fadeInUp">
-                                        <p>vhHacks is one of Greater Vancouver's <i>only</i> hackathons dedicated to
-                                            high school students (<b>like you!</b>) More than one hundred students
+                                        <p>vhHacks is Greater Vancouver's biggest hackathon dedicated to
+                                            high school students. More than one hundred students
                                             will gather and collaborate to build and
                                             showcase a project in under 24 hours. No experience? No problem! vhHacks is
                                             beginner friendly, so anyone can join and learn a new skill!</p>
