Remove date and mailing list

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8 header-text text-center">
                 <h2>vhHacks 2020</h2>
-                <p>March 14 - 15 <br> University of British Columbia</p>
-                <a href="https://fdier.co/IZnb7l" class="button">I'm Interested!</a>
+                <p>University of British Columbia</p>
+                <!--<a href="https://fdier.co/IZnb7l" class="button">I'm Interested!</a>-->
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
