--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <p>&copy;Copyright 2018 All rights reserved. <br>Built with <i class="ti-heart"
+                        <p>&copy;Copyright 2018 All rights reserved. <br>Made with <i class="ti-heart"
                                                                                        aria-hidden="true"></i>
-                            by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Based on the Colid template
-                            from <a href="https://colorlib.com">Colorlib</a></p>
+                            by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Built with Colid
+                            by <a href="https://colorlib.com">Colorlib</a></p>
                     </div>
                 </div>
             </div>
