Add sponsorship pack to sponsors section

--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
                 <!--sponsors end-->
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>
+                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                    <a href = "vhh-sp.pdf">sponsorship pack.</a>
                 </p>
             </div>
         </div>
