Add stickermule to sponsors

--- a/index.html
+++ b/index.html
@@ -396,6 +396,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="box">
+                        <div class="box-icon">
+                            <a href="https://stickermule.com"><img src="images/sticker-mule-logo-light-bg.svg"
+                                                             style="height:175px" alt=""></a>
+                        </div>
+                    </div>
+                </div>
                 <!--sponsors end-->
             </div>
             <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
