Update date, make text more readable

--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         <div class="row v-center">
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8 header-text text-center">
+                <img src="images/vhhacksclear.png" style="max-height:20vh">
                 <h2>vhHacks 2020</h2>
-                <p>University of British Columbia</p>
+                <p>April 11 - 12<br>University of British Columbia</p>
                 <!--<a href="https://fdier.co/IZnb7l" class="button">I'm Interested!</a>-->
             </div>
             <div class="col-xs-2 col-md-2"></div>
