Update Location in FAQ

--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
                                     event?</a>
                             </h4>
                             <div id="collapse6" class="panel-collapse collapse">
-                                <p>vhHacks will be taking place at the UBC Hennings building in room 200. You can find
+                                <p>vhHacks will be taking place in the AMS Great Hall. You can find
                                     details about the room <a
                                             href="https://learningspaces.ubc.ca/classrooms/henn-200">here</a> and
                                     directions to the venue <a
-                                            href="https://www.google.ca/maps/dir//Hennings+Building,+Hennings+Bldg,+Vancouver,+BC+V6T+1Z1/@49.2664798,-123.2543775,17z/data=!4m16!1m6!3m5!1s0x548672b6f5321131:0x1877a1f004691be!2sHennings+Building!8m2!3d49.2664763!4d-123.2521888!4m8!1m0!1m5!1m1!1s0x548672b6f5321131:0x1877a1f004691be!2m2!1d-123.2521888!2d49.2664763!3e3">here.</a>
+                                            href="https://www.google.ca/maps/dir//AMS+Student+Nest,+University+Boulevard,+Vancouver,+BC/@49.2665688,-123.3199038,12z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x54867398c216945b:0xe9bbdd7328c09b21!2m2!1d-123.2498647!2d49.2664779!3e3">here.</a>
                                 </p>
                             </div>
                         </div>
