--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <div id="collapse6" class="panel-collapse collapse">
                                 <p>vhHacks will be taking place in the AMS Great Hall. You can find
                                     details about the room <a
-                                            href="https://learningspaces.ubc.ca/classrooms/henn-200">here</a> and
+                                            href="https://www.ams.ubc.ca/the-nest/">here</a> and
                                     directions to the venue <a
                                             href="https://www.google.ca/maps/dir//AMS+Student+Nest,+University+Boulevard,+Vancouver,+BC/@49.2665688,-123.3199038,12z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x54867398c216945b:0xe9bbdd7328c09b21!2m2!1d-123.2498647!2d49.2664779!3e3">here.</a>
                                 </p>
