Add mailing list

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <img src="images/vhhacksclear.png" style="max-height:20vh">
                 <h2>vhHacks 2020</h2>
                 <p>April 11 - 12<br>University of British Columbia</p>
-                <!--<a href="https://fdier.co/IZnb7l" class="button">I'm Interested!</a>-->
+                <a href="signup.html" class="button">Mailing List</a>
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
