--- a/signup.html
+++ b/signup.html
@@ -56,23 +56,14 @@
         <div class="sk-cube3 sk-cube"></div>
     </div>
 </div>
-<div class="mainmenu-area" data-spy="affix" data-offset-top="100" id="navbar">
-    <div class="container">
-        <!--Logo-->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#primary-menu">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="index.html" class="navbar-brand logo">
-                <img src="images/homeicon.png" class="d-inline-block" style="max-height:32px">
-            </a>
-        </div>
-    </div>
+<div class="text-center">
+    <a href="index.html" style="display: inline-block; padding-top: 5vh">
+        <img src="images/logo-glow.png" class="d-inline-block" style="max-height:100px">
+    </a>
 </div>
-<div style="height: 1500px">
-    <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="1500" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+<div class="container" style="height: 1500px; padding-top: 5vh">
+    <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed" src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="1150" style="background: transparent; border: 1px solid #ccc;"></iframe>
 </div>
 
 
