--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
     <![endif]-->
 </head>
 
-<body data-spy="scroll" data-target="#primary-menu">
+<body data-spy="scroll" data-target="#primary-menu" >
 
 <div class="preloader">
     <div class="sk-folding-cube">
@@ -56,17 +56,17 @@
         <div class="sk-cube3 sk-cube"></div>
     </div>
 </div>
-<div class="text-center">
-    <a href="index.html" style="display: inline-block; padding-top: 5vh">
-        <img src="images/logo-glow.png" class="d-inline-block" style="max-height:100px">
-    </a>
+<div class="sky-bg">
+    <div class="text-center">
+        <a href="index.html" style="display: inline-block; padding-top: 5vh">
+            <img src="images/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
+        </a>
+    </div>
+
+    <div class="container" style="height: 1500px; padding-top: 5vh">
+        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" style="background: transparent;"></iframe>
+    </div>
 </div>
-
-<div class="container" style="height: 1500px; padding-top: 5vh">
-    <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed" src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="1150" style="background: transparent; border: 1px solid #ccc;"></iframe>
-</div>
-
-
 
 
 <!--Vendor-JS-->
