open facebook in new tab

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                             beginner friendly, so anyone can join and learn a new skill!</p>
                                     </div>
                                     <div class="caption-button" data-animation="animated fadeInUp">
-                                        <a href="https://www.facebook.com/events/432399567627158/" class="button">See the Facebook Event!</a>
+                                        <a target="_blank" href="https://www.facebook.com/events/432399567627158/" class="button">See the Facebook Event!</a>
                                     </div>
                                     <!--
                                     <div class="caption-button" data-animation="animated fadeInUp">
