Add sponsorship spotlight temporary placeholders

--- a/index.html
+++ b/index.html
@@ -220,28 +220,72 @@
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
                     <div class="page-title">
                         <h2>Sponsor Spotlight</h2>
-                        <p>Coming soon! Want to see your logo here? Reach out to us at <a
-                                href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
-                                <a href = "vhh-sp.pdf">sponsorship pack.</a>
-                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <!--sponsors start-->
-                <!--                <div class="col-xs-12 col-sm-6 col-md-4">-->
-                <!--                    <div class="box">-->
-                <!--                        <div class="box-icon">-->
-                <!--                            <a href="https://notion.so"><img src="images/Notion-logo-512.png"-->
-                <!--                                                             style="height:175px" alt=""></a>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--sponsors end-->
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                    <div class="testimonials">
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-1.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-2.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-3.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-4.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-5.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                        <div class="testimonial">
+                            <div class="testimonial-photo">
+                                <img src="images/avatar-small-6.png" alt="">
+                            </div>
+                            <h3>Sponsor!</h3>
+                            <p>Want to see your logo here? Reach out to us at <a
+                                    href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a>, or check out our
+                                <a href = "vhh-sp.pdf">sponsorship pack.</a></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!--            <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">-->
-            <!--                <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>-->
-            <!--            </div>-->
+                        <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+                            <p>Interested in becoming a sponsor? Reach out to us at <a href="mailto:outreach@vhhacks.ca">outreach@vhhacks.ca</a></p>
+                        </div>
         </div>
     </section>
     <img src="images/fishy-17.svg" id="fish2">
