--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 
 <body data-spy="scroll" data-target="#primary-menu">
 <div id="ctf" class="hide">
-        seed = 202041112
-        <br>
-        <p id="spaceImportant">code = ' . :~~^ _~ || !    H^h ^vs~/ ,\n_    /   ~h\n~ s phs ~  \n  O^ \\w ^  o_^_ ~r^c|\n" a" \'"  s _  ka^ \n ^ :|^~l~^p /e  _  `u \\e_^"  r_     _ ~\\\n\n_  .w~  ~   ae '</p>
-        <br>
-        hint: sample from random.sample(range(-1,152),153)
+    seed = 202041112
+    <br>
+    <p id="spaceImportant">code = ' . :~~^ _~ || ! H^h ^vs~/ ,\n_ / ~h\n~ s phs ~ \n O^ \\w ^ o_^_ ~r^c|\n" a" \'" s _
+        ka^ \n ^ :|^~l~^p /e _ `u \\e_^" r_ _ ~\\\n\n_ .w~ ~ ae '</p>
+    <br>
+    hint: sample from random.sample(range(-1,152),153)
 </div>
 <script>
     window.onload = function () {
@@ -156,12 +157,11 @@
                                             <h2>What is vhHacks?</h2>
                                         </div>
                                         <div class="caption-desc" data-animation="animated fadeInUp">
-                                            <p>vhHacks is Greater Vancouver's biggest hackathon dedicated to
+                                            <p>vhHacks is Greater Vancouver's first free hackathon dedicated to
                                                 high school students. More than one hundred students
-                                                will gather and collaborate to build and
-                                                showcase a project in under 24 hours. No experience? No problem! vhHacks
-                                                is
-                                                beginner friendly, so anyone can join and learn a new skill!</p>
+                                                will gather and collaborate to build and showcase a project in under 24
+                                                hours. No experience? No problem! vhHacks is beginner friendly, so
+                                                anyone can join to learn, build, and hack.</p>
                                         </div>
                                         <div class="caption-button" data-animation="animated fadeInUp">
                                             <a target="_blank" href="https://www.facebook.com/events/432399567627158/"
