--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </section>
 
         <img src="images/fishy-15.svg" id="fish3">
-        <section class="section-padding" id="benefactors">
+        <section class="section-padding" id="contributors">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
