Remove unused JS, add faded half gradient navbar, remove spotlight

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <nav class="collapse navbar-collapse" id="primary-menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#learn">Learn</a></li>
-                    <li><a href="#spotlight">Spotlight</a></li>
                     <li><a href="#faq-page">FAQ</a></li>
+                    <li><a href="#contributors">Sponsors</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -269,7 +269,7 @@
         </section>
 
         <img src="images/fishy-18.svg" id="fish1">
-        <section class="section-padding" id="spotlight">
+        <!--section class="section-padding" id="spotlight">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
@@ -343,7 +343,7 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </section-->
         <img src="images/fishy-17.svg" id="fish2">
 
         <section class="section-padding" id="faq-page">
@@ -649,7 +649,7 @@
     <script src="js/wow.min.js"></script>
     <!--Main-active-JS-->
     <script src="js/main.js"></script>
-    <script src="js/navbarscroll.js"></script>
+    <!--script src="js/navbarscroll.js"></script-->
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
     <!--<script src="js/daynight.js"></script>-->
