yeet the nwhacks navbar mechanics

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <script src="js/wow.min.js"></script>
     <!--Main-active-JS-->
     <script src="js/main.js"></script>
-    <!--script src="js/navbarscroll.js"></script-->
+    <script src="js/navbarscroll.js"></script>
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
     <!--<script src="js/daynight.js"></script>-->
