--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand logo">
+                <a href="#home-page" class="navbar-brand logo">
                     <img src="images/homeicon.png" class="d-inline-block" style="max-height:32px">
                 </a>
             </div>
